--- a/style.css
+++ b/style.css
@@ -134,3 +134,42 @@ body {
 }
 
 }
+
+@media (min-width: 900px) {
+
+.card {
+    flex-direction: row;
+    max-width: 1030px;
+}
+
+.logo {
+    position: absolute;
+    right: 7em;
+    padding-top: 12px;
+}
+
+.img-logo {
+    height: 130px;
+    width: 230px;
+}
+
+.btn-group {
+    justify-items: right;
+    flex-direction: column;
+    width: 50%;
+    margin-top: 21em;
+    padding-left: 12px;
+}
+
+.icons {
+    position: relative;
+    justify-content: space-between;
+    right: 45px;
+}
+
+.social-list {
+    position: absolute;
+    top: 10em;
+}
+
+}
