--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 
 .btn-link {
     display: flex;
-    background:rgba(106, 34, 116, 0.788);
+    background:rgba(111, 12, 122, 0.766);
     border-radius: 2px;
     border: none;
     color: white;
@@ -97,6 +97,7 @@ body {
     opacity: 1;
 }
 
+/* iPad portrait mode sizing */
 @media (min-width: 400px) {
   
 .card { 
@@ -135,6 +136,7 @@ body {
 
 }
 
+/* iPad landscape mode sizing */
 @media (min-width: 900px) {
 
 .card {
@@ -157,7 +159,7 @@ body {
     justify-items: right;
     flex-direction: column;
     width: 50%;
-    margin-top: 21em;
+    margin-top: 23em;
     padding-left: 12px;
 }
 
@@ -169,7 +171,67 @@ body {
 
 .social-list {
     position: absolute;
-    top: 10em;
+    top: 10.5em;
+}
 }
 
+/* iPhone X landscape mode sizing */
+@media (min-width: 800px) and (max-height: 400px) {
+    
+.card {
+    flex-direction: row;
+}
+
+.card-main {
+    right: 12em;
+    width: 400px;
+    height: 300px;
+}
+
+.card-image {
+    position: absolute;
+    bottom: 35px;
+    width: 300px;
+    height: 300px;
+}
+
+.logo {
+    position: relative;
+    padding: 0;
+    margin:0;
+    left: 27em;
+}
+
+.img-logo {
+    position: relative;
+    bottom: 7em;
+}
+
+.btn-group {
+    flex-direction: row;
+    height: min-content;
+    top: 12.5em;
+    left: 5px;
+}
+
+.btn-link {
+    font-size: 22px;
+    width: 200px;
+    height: 7px;
+}
+
+.icons {
+    position: relative;
+    justify-content: space-around;
+    right: 4em;
+}
+
+.social-list {
+    position: absolute;
+    top: 3.8em;
+}
+
+.fab {
+    font-size: 40px;
+}
 }
